[tool.poetry]
name = "til-kerastuner"
version = "0.1.0"
description = ""
authors = ["x28646510 <x28646510@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keras-tuner = "^1.0.1"
tensorflow = "2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
