[package]
name = "db_migration"
version = "0.1.0"
authors = ["x28646510 <x28646510@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = {version = "0.2.0-alpha.2", features = ["postgres"]}
postgres = "0.15.0"
dotenv = "0.15"
